Rewrite instructions and labels  on third-level keying page and Getting Started page to make the terms filters, questions, and choices consistent.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1508 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -173,37 +173,43 @@
                             alt=""> Click to enlarge</a>
                         <ul>
                             <li>On the left side of the new page is a list of
-                            questions about your plant. Click on any question,
-                            and a working area will open in the center of the
-                            page, showing the full question, some helpful
-                            hints, and a set of illustrated choices for the
-                            answer. Click on the answer (i.e., the
-                            characteristic) that most closely matches your
-                            plant.</li>
+                            choices to help you narrow your matching
+                            species. Pick any choice
+                            and a box will open in the center of the
+                            page. In the box, make a selection that
+                            most closely matches your plant and press
+                            the Apply Selection button. If you're not
+                            sure which selection to make, it's fine to
+                            move on without making a selection.</li>
+                            <li>Press the Get More Choices button to add a
+                            few new choices, added in order of their
+                            potential helpfulness in narrowing down your
+                            matching species.</li>
                             <li>If you can only observe part of a plant, say
-                            the leaves, you can click on that feature in the
-                            section "What type of features can you see on your
-                            plant?" and you'll only be offered questions about
+                            the leaves, you can press Get More Choices,
+                            then check the "leaves" check box and press
+                            the second Get More Choices button, and
+                            you'll only get new choices about
                             leaves.</li>
-                            <li>Click the "Get more choices" button and new
-                            questions will appear, sorted in order of their
-                            helpfulness in narrowing down your species.</li>
-                            <li>View a set of thumbnail photographs of all the
-                            possible plants that match your description,
+                            <li>View a set of thumbnail photos of all the
+                            possible plants that match your selections,
                             listed in alphabetical order by scientific
                             name.</li>
                             <li>Click on a photo to get a pop-up box with more
                             information about a plant.  If you decide that
-                            this is your plant, click on "That's My Plant" in
-                            the pop-up box and you'll be taken to the species
-                            full information page.
-                            <li class="hidden">The set of thumbnails gets
-                            smaller as you answer more questions and hone in
-                            on your species by the process of
+                            this is your plant, or want to read more
+                            about it in order to decide, press the Get More
+                            Info button to go to the full information
+                            page for that species.
+                            <li class="hidden">The set of thumbnail
+                            photos gets
+                            smaller as pick additional choices and make
+                            more selections, honing in
+                            on your plant by the process of
                             elimination.</li>
-                            <li class="hidden">To delete questions from your
-                            list, click the X button next to the
-                            question.</li>
+                            <li class="hidden">To clear a selection
+                            you've previously made, click the Clear link
+                            for the choice in the list at left.</li>
                         </ul>
                     </div>
 
