--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -71,11 +71,11 @@
                             <a href="#" class="close"></a>
 
                             <div class="intro-message">
-				    	        <h4>Narrow Your Search</h4>
-                                <p>Click on one of the features in the list
-                                to the left. A question about that feature
-                                will appear here. Choose the answer that most
-                                closely matches your plant.</p>
+				    	        <h4>Narrow Your Matching Species</h4>
+                                <p>Pick a choice in the list
+                                at left. Then make a selection here
+                                that most closely matches your plant.
+                                Repeat.</p>
     				        </div>
                             
                             <h4></h4>
@@ -127,8 +127,8 @@
 
                 <div id="sidebar" class="tinted">
                     <div class="section instructions">
-                        <h5>Choose a question below to answer about your
-                            plant</h5>
+                        <h5>Pick a choice for you plant from this
+                            scrollable list:</h5>
                     </div>
                     <div class="scroll">
                         <div class="loading">Loading choices…</div>
@@ -140,8 +140,8 @@
                     <div class="section">
                         <p class="get-more">
                             <a class="get-choices">Get More Choices</a>
-                            We'll add a few more ways to narrow your
-                            selections.</p>
+                            Add a few more choices for narrowing your
+                            matching species.</p>
 			        </div><!--Closes .section-->
 			
 			        <div class="section">
