--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -910,14 +910,15 @@ ul.option-list li:hover, ul.option-list li.active {
 }
 
 .get-more {
+    font-size: 11px;
     line-height: 16px;
-    margin: 0 12px 20px;
+    margin: 0 4px 20px;
+    text-align: center;
 }
 .get-more a {
     cursor: pointer;
     display: block;
     font-family: "Trebuchet MS", Trebuchet, Arial, Helvetica, sans-serif;
-    font-size: 18px;
     font-weight: bold;
     margin: 18px 0 10px;
 }
