Correct the background color of the choices list items on the level 3 keying page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1510 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -898,6 +898,7 @@ a.get-choices:active {
     color: #807121;
 }
 ul.option-list li {
+    background: #fff;
     display: block;
     padding: 12px;
     margin: 0;
