Reduce the width of the Clear link in the choices list on the level 3 keying page. Formerly it was 100% width across the box, easy to accidentally press.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1512 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -927,6 +927,7 @@ ul.option-list li.active {
 .option-list a.clear-filter {
     display: none;
     margin-top: 4px;
+    width: 45px;
 }
 
 .get-more {
