For enhancement 183.32, tweak headings and navigation to save vertical space. Try to update the functional tests so they pass with recent changes, although some of these tests seem to run unreliably for me.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1516 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -42,8 +42,8 @@
                         </ul>
                     </div><!--Closes #breadcrumb-->
 
-                    <h2>Plant Identifier</h2>
-                    <h4>Which group best describes your plant?</h4>
+                    <!--<h2>Plant Identifier</h2>-->
+                    <h2>Which group best describes your plant?</h2>
 
                     <div class="clearit"></div>
 
