--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -27,11 +27,9 @@
                                 src="/static/images/icons/subgroup.png" alt=""> My Plant</a></li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
-
-                    {% include "simplekey/_plant_not_in_subgroup.html" %}
-
-                    <h2>Plant Identifier</h2>
-                    <h4>Is your plant in one of these subgroups?</h4>
+                    
+                    <!--h2>Plant Identifier</h2-->
+                    <h2>Is your plant in one of these subgroups?</h2>
 
                     <div class="clearit"></div>
 
