Lighten the heavy grid lines around the matching species rows.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1519 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -772,7 +772,7 @@ a.get-more-info:active {
     position: absolute;
     top: 0px;
     left: 0px;
-    border: 1px solid #508e31;
+    border: 1px solid #c3d941;
     background: #fff;
     padding: 8px 6px;
     height: 210px;
