Fix bug where Get More Choices items wouldn't take an active background color.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1522 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -913,7 +913,8 @@ ul.option-list li.last {
     border-bottom: 1px solid #c3d941;
 }
 ul.option-list li.active {
-    background: #dce890;
+    background: #dce890 !important; /* Important overrides inline background
+                                       color from More Choices animation */
     cursor: pointer;
 }
 .option-list a.option {
