Attempt to put close box a bit more out of the way on lightboxed images; also add some padding to make it easier to click.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1523 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1865,6 +1865,14 @@ Family and Genus Pages Styles
     float: right;
 }
 
+/* Shadowbox close button */
+#sb-nav-close {
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 12px; /* Increase click target area */
+    right: -14px !important; /* Nestle into top right corner */
+    top: -14px !important;
+}
 
 /*** Notification for draft status ***/
 
