Place lightbox close button at the top right corner rather than nestled into the corner of the box.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1524 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1870,8 +1870,8 @@ Family and Genus Pages Styles
     background-position: center;
     background-repeat: no-repeat;
     padding: 12px; /* Increase click target area */
-    right: -14px !important; /* Nestle into top right corner */
-    top: -14px !important;
+    right: -20px !important; /* Place at top right corner */
+    top: 6px !important;
 }
 
 /*** Notification for draft status ***/
