--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -59,7 +59,7 @@
         <script>
             function moveCloseLink() {
                 var cb = document.getElementById('sb-nav-close');
-                var tb = document.getElementById('sb-wrapper-inner');
+                var tb = document.getElementById('sb-wrapper');
                 if (tb) {
                     tb.appendChild(cb);
                 }
