Make images larger on the plant preview popups. Change the 'large' extra thumbnail in the importer to generate images for plant preview popups and also the jScrollPane on the species page. Further eliminate thumbnail/image generation on the species page by trying our full images for the lightboxed images; if this works out OK, species pages will be fast on the demo server, even the first time.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1525 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -60,17 +60,11 @@
 		            <div class="scrollWrapper">
                         <div class="scrollableArea">
                             {% for i in species_images %}
-                                {% thumbnail i.image "233x239" crop="center" as thumb %}
-                                {% if i.image.height > i.image.width %}
-                                    {% thumbnail i.image "600x800" as full %}
-                                {% else %}
-                                    {% thumbnail i.image "800x600" as full %}
-                                {% endif %}
-                                <a href="{{ full }}" {% if forloop.counter == 1 %}id="startimage"{% endif %}
+                                <a href="{{ i.image.url }}" {% if forloop.counter == 1 %}id="startimage"{% endif %}
                                     rel="shadowbox"
                                     title="{{ i.image_type|capfirst }}">
-                                    <img src="{{ thumb }}"
-                                        alt="{{ i.image_type|capfirst }}: {( scientific_name }}">
+                                    <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
+                                        alt="{{ i.image_type|capfirst }}: {{ scientific_name }}">
                                 </a>
                             {% endfor %}
 			            </div>
