--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -718,9 +718,8 @@ div.modal-wrap {
     padding: 0 0 20px 0;
 }
 .modal-wrap .inner h4.heading, .modal-wrap .inner h3.heading {
-	border-bottom: 1px solid #ededed;
-	margin: 0 0 13px 0;
-    padding: 13px 0 13px 20px;
+	margin: 0;
+    padding: 13px 0 0 20px;
 }
 .modal-wrap .inner h3.heading {
 	font-style: italic;	
