--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -487,13 +487,20 @@ Plant Listing Styles
     float: left;
 	margin: 0 10px 0 0;	
 	position: relative;
-	width: 244px;
+	width: 165px;
+}
+#plant-id-3 .img-gallery {
+    width: 244px;
 }
 .img-gallery .img-container {
-	height: 239px;
+	height: 149px;
 	overflow: hidden;
 	position: relative;
-	width: 239px;
+	width: 160px;
+}
+#plant-id-3 .img-gallery .img-container {
+    height: 239px;
+    width: 239px;
 }
 .img-gallery .frame, #taxon #species-images {
 	border: 5px solid rgba(255, 255, 255, 0.8);
@@ -505,8 +512,12 @@ Plant Listing Styles
 	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
 }
 .img-gallery .frame {
+    height: 139px;
+    width: 150px;
+}
+#plant-id-3 .img-gallery .frame {
     height: 229px;
-	width: 229px;
+    width: 229px;
 }
 .img-gallery .images {
 	clear: both;
@@ -537,7 +548,10 @@ Plant Listing Styles
 }
 .list-item .details {
 	float: left;	
-	width: 460px;
+	width: 525px;
+}
+#plant-id-3 .list-item .details {
+    width: 460px;
 }
 .list-item p {
 	padding: 0 0 7px 25px;
