Correct some capitalization.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1529 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -39,7 +39,7 @@
 					</div><!--Closes .img-gallery-->
 					
                     <div class="details">
-                        <h4>Facts about...</h4>
+                        <h4>Facts About...</h4>
                         <p class="facts"></p>
                         <h4>Habitat</h4>
                         <p class="habitat"></p>
