--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -68,7 +68,7 @@
                     </div><!--Closes .working-area-->
 
                     <h3><span class="species-count-phrase">
-                        <span class="species-count">finding</span>
+                        <span class="species-count">Finding</span>
                         matching species</span>
                     </h3>
 
