Now that Phase 2 of the visual design is in place, enable the 'Draft' notification banner again. Make the 'More Choices Added' appear on top of it when shown.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1530 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,8 +1,6 @@
-<!-- Disable 'draft' notice while implementing visual design Phase 2 -->
-<!--div id="notify">
+<div id="notify">
     <div>DRAFT: This web site is under development.</div>
-</div-->
-
+</div>
 
     <header>
         <div class="container">
