Make image galleries on pile/group pages larger.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1532 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -42,7 +42,7 @@
                             <div class="img-container">
                                 <div class="images">
                                     {% for image in pile.sample_species_images.all %}
-                                        <img src="{{ image.image.thumbnail.absolute_url }}"
+                                        <img src="{{ image.image.extra_thumbnails.large.absolute_url }}"
                                             alt="{{ image.alt }}">
                                     {% endfor %}
                                 </div><!--Closes .images-->
