--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -55,7 +55,7 @@
                             <div class="img-container">
                                 <div class="images">
                                     {% for image in pilegroup.sample_species_images.all %}
-                                        <img src="{{ image.image.thumbnail.absolute_url }}"
+                                        <img src="{{ image.image.extra_thumbnails.large.absolute_url }}"
                                             alt="{{ image.alt }}">
                                     {% endfor %}
                                 </div><!--Closes .images-->
